# HelloJNI

./: .gitignore
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hello-jni.cpp
app/src/main/java/com/example/hellojni/: HelloJni.kt  LocalUSBManager.kt  ProbeConnectionInterface.kt  ProbeConnectionReceiver.kt
app/src/main/res/xml/: device_filter.xml
